[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/dialog_maker/icons/DeleteIcon.svg" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://addons/dialog_maker/scripts/tree_editor/start_panel.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.164706, 0.231373, 0.180392, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0.0431373, 0.207843, 0.247059 )

[node name="StartPanel" type="PanelContainer"]
margin_right = 205.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 199.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 193.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PortraitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 72.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 3
icon = ExtResource( 2 )
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 157.0
margin_bottom = 72.0

[node name="CharacterOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 89.0
margin_bottom = 20.0
size_flags_vertical = 4
text = "Character"

[node name="PositionOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 89.0
margin_bottom = 44.0
size_flags_vertical = 4
text = "Left"
items = [ "Left", null, false, 0, null, "Center", null, false, 1, null, "Right", null, false, 2, null, "1", null, false, 3, null, "2", null, false, 4, null, "3", null, false, 5, null, "4", null, false, 6, null ]
selected = 0

[node name="FlipCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 89.0
margin_bottom = 72.0
text = "Flip"

[node name="Separator" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 161.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeleteButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 165.0
margin_top = 25.0
margin_right = 193.0
margin_bottom = 47.0
size_flags_vertical = 4
icon = ExtResource( 1 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
visible = false
margin_top = 78.0
margin_right = 319.0
margin_bottom = 82.0

[node name="PortraitGridContainer" type="GridContainer" parent="VBoxContainer"]
visible = false
margin_top = 82.0
margin_right = 319.0
margin_bottom = 82.0
columns = 4
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PortraitButton" to="." method="_on_PortraitButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/CharacterOptionButton" to="." method="_on_CharacterOptionButton_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/PositionOptionButton" to="." method="on_edit"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/FlipCheckBox" to="." method="on_edit"]
